Fix background image on mobile

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body{
     background-image: url(images/background.JPEG);
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
 }
 .container{
     padding: 10px 10%;
